// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users/Header default smoke-test 1`] = `
<div>
  <div class="flex items-center my-2">
    <div class="avatar flex-none">
      <div class="rounded h-8 w-8">
        <img class="my-0"
             src="../test-profile-image.jpg"
             alt="DanConwayDev"
        >
      </div>
    </div>
    <div class="m-auto flex-auto pl-3">
      DanConwayDev
    </div>
  </div>
</div>
`;

exports[`Users/Header displayName without name smoke-test 1`] = `
<div>
  <div class="flex items-center my-2">
    <div class="avatar flex-none">
      <div class="rounded h-8 w-8">
        <img class="my-0"
             src="../test-profile-image.jpg"
             alt="DanConwayDev"
        >
      </div>
    </div>
    <div class="m-auto flex-auto pl-3">
      DanConwayDev
    </div>
  </div>
</div>
`;

exports[`Users/Header inline loading smoke-test 1`] = `
<div class="inline-block">
  <div class="flex items-center">
    <div class="avatar flex-none">
      <div class="rounded h-5 w-5 skeleton">
      </div>
    </div>
    <div class="m-auto flex-auto pl-1">
      <div class="skeleton h-4 w-24">
      </div>
    </div>
  </div>
</div>
`;

exports[`Users/Header inline smoke-test 1`] = `
<div class="inline-block">
  <div class="flex items-center">
    <div class="avatar flex-none">
      <div class="rounded h-5 w-5">
        <img class="my-0"
             src="../test-profile-image.jpg"
             alt="DanConwayDev"
        >
      </div>
    </div>
    <div class="m-auto flex-auto pl-1">
      DanConwayDev
    </div>
  </div>
</div>
`;

exports[`Users/Header loading smoke-test 1`] = `
<div>
  <div class="flex items-center my-2">
    <div class="avatar flex-none">
      <div class="rounded h-8 w-8 skeleton">
      </div>
    </div>
    <div class="m-auto flex-auto pl-3">
      <div class="skeleton h-4 w-24">
      </div>
    </div>
  </div>
</div>
`;

exports[`Users/Header name and displayName shows name smoke-test 1`] = `
<div>
  <div class="flex items-center my-2">
    <div class="avatar flex-none">
      <div class="rounded h-8 w-8">
        <img class="my-0"
             src="../test-profile-image.jpg"
             alt="Dan"
        >
      </div>
    </div>
    <div class="m-auto flex-auto pl-3">
      Dan
    </div>
  </div>
</div>
`;

exports[`Users/Header no image smoke-test 1`] = `
<div>
  <div class="flex items-center my-2">
    <div class="avatar flex-none">
      <div class="rounded h-8 w-8 bg-neutral">
      </div>
    </div>
    <div class="m-auto flex-auto pl-3">
      DanConwayDev
    </div>
  </div>
</div>
`;

exports[`Users/Header not found smoke-test 1`] = `
<div>
  <div class="flex items-center my-2">
    <div class="avatar flex-none">
      <div class="rounded h-8 w-8 bg-neutral">
      </div>
    </div>
    <div class="m-auto flex-auto pl-3">
      npub18669...
    </div>
  </div>
</div>
`;
